# LPU

./: CMakeLists.txt  README.md  helloworld.c
LovelyProfessionalUniversity/Sem1/Hackerrank/: minmansum.py  taking list as an input
LovelyProfessionalUniversity/Sem1/Python/: 01Milestone Project 1  Assignment.ipynb  Operator Prescedence.py  Tester2.py  U2L4.py  U2L4Q3.py  Unpacking.py  augumented assignment operator.py  formatted strings.py  regex-2.py  regex-3.py  regex-4.py  regex-5.py  regex-6.py  regex-7.py  regex-8.py  regex.py  string methods.py  tester-2.py  tester-3.py  tester-4.py  tester-5.py  tester-6.py  tester.py  tester3.py  yey.py
LovelyProfessionalUniversity/Sem1/Web-Dev/HTML/ETP/: home.html  index.html  index2.html
LovelyProfessionalUniversity/Sem1/Web-Dev/JS/: index.html  index.js
LovelyProfessionalUniversity/Sem2/C Project/: Pre-Submission Report.txt  a.out  array-1.c  array_operations.c  bubble_sort.c  module1  module1.c  module3.c  tester5.c  tester6.c  tester7.c  tester8.c
LovelyProfessionalUniversity/Sem2/C_PPTs/: .~lock.Pointers_Part_1.pptx#  1DArray upto bubble sort.pptx  1DArray upto passing to function.pptx  1DArray.pptx  2DArray.pptx  Dynamic_Memory_Allocation.pptx  Lecture 2Constants and Variables.pptx  Lecture 3Operators First Part.pptx  Lecture 4Operators Second Part.pptx  Lecture 5Part1Decision_Control_OR_Conditional_Control_Structures.ppt  Lecture 6Part2Looping Statements_or_iterative statements.pptx  Lecture 7JumpStatements.pptx  Lecture 8 and 9Formatted_unformatted_functions_Type_Conversion_Type modifiers.pptx  Lecture_10_User_Defined_Functions.pptx  Lecture_11_User_Defined_Functions.pptx  Lecture_12_Storage_classes_and_Scope_rules.pptx  Lecture_13_Storage_classes_and_Scope_rules.pptx  Pointers_Part_1 (1).pptx  Pointers_Part_2.pptx  StringsPART1 (1).pptx  StringsPART1.pptx  Structures and UnionPart1.pptx  Structures and UnionPart2.ppt  Structures and UnionPart2.pptx
LovelyProfessionalUniversity/Sem2/C_programming/: Hello_World.c  alpha bet.c  area_of_square.c  astruct.txt  compiler_benchmark.c  datatypes.c  do_while_loop.c  factorial.c  file_io_1.c  file_io_2.c  file_io_3  file_io_3.c  file_io_4  file_io_4.c  file_io_5.c  file_io_6.c  for_loop.c  func.c  hello  hello_world.c  if-else.c  if_else.c  input.c  jaat.cpp  jaat.h  jat  marks.c  new_file  new_file.cpp  newfile.c  odd_even.c  output.txt  pointer.c  pointer_2.c  pointer_3.c  pointer_4.c  pointer_5.c  pointer_6.c  pointer_tester  pointer_tester.c  (+10 more)
LovelyProfessionalUniversity/Sem2/CodeRunner Custom Script/: installation.md  setting.json
LovelyProfessionalUniversity/Sem2/hehe/: 1.c  2.c  3.c  c_project.c  c_projecy_final  c_projecy_final.c  dictionary.txt  khkjh  tempCodeRunnerFile.c
