cmake_minimum_required(VERSION 3.25)
project(LPU)

set(CMAKE_CXX_STANDARD 14)

add_executable(LPU
        .idea/.gitignore
        .idea/LPU.iml
        .idea/modules.xml
        .idea/vcs.xml
        LovelyProfessionalUniversity/Sem1/Hackerrank/minmansum.py
        "LovelyProfessionalUniversity/Sem1/Hackerrank/taking list as an input"
        LovelyProfessionalUniversity/Sem1/Python/.idea/inspectionProfiles/profiles_settings.xml
        LovelyProfessionalUniversity/Sem1/Python/.idea/.gitignore
        LovelyProfessionalUniversity/Sem1/Python/.idea/misc.xml
        LovelyProfessionalUniversity/Sem1/Python/.idea/modules.xml
        LovelyProfessionalUniversity/Sem1/Python/.idea/Python.iml
        "LovelyProfessionalUniversity/Sem1/Python/01Milestone Project 1  Assignment.ipynb"
        "LovelyProfessionalUniversity/Sem1/Python/augumented assignment operator.py"
        "LovelyProfessionalUniversity/Sem1/Python/formatted strings.py"
        "LovelyProfessionalUniversity/Sem1/Python/Operator Prescedence.py"
        LovelyProfessionalUniversity/Sem1/Python/regex-2.py
        LovelyProfessionalUniversity/Sem1/Python/regex-3.py
        LovelyProfessionalUniversity/Sem1/Python/regex-4.py
        LovelyProfessionalUniversity/Sem1/Python/regex-5.py
        LovelyProfessionalUniversity/Sem1/Python/regex-6.py
        LovelyProfessionalUniversity/Sem1/Python/regex-7.py
        LovelyProfessionalUniversity/Sem1/Python/regex-8.py
        LovelyProfessionalUniversity/Sem1/Python/regex.py
        "LovelyProfessionalUniversity/Sem1/Python/string methods.py"
        LovelyProfessionalUniversity/Sem1/Python/tester-2.py
        LovelyProfessionalUniversity/Sem1/Python/tester-3.py
        LovelyProfessionalUniversity/Sem1/Python/tester-4.py
        LovelyProfessionalUniversity/Sem1/Python/tester-5.py
        LovelyProfessionalUniversity/Sem1/Python/tester-6.py
        LovelyProfessionalUniversity/Sem1/Python/tester.py
        LovelyProfessionalUniversity/Sem1/Python/Tester2.py
        LovelyProfessionalUniversity/Sem1/Python/tester3.py
        LovelyProfessionalUniversity/Sem1/Python/U2L4.py
        LovelyProfessionalUniversity/Sem1/Python/U2L4Q3.py
        LovelyProfessionalUniversity/Sem1/Python/Unpacking.py
        LovelyProfessionalUniversity/Sem1/Python/yey.py
        LovelyProfessionalUniversity/Sem1/Web-Dev/HTML/ETP/home.html
        LovelyProfessionalUniversity/Sem1/Web-Dev/HTML/ETP/img-2.png
        LovelyProfessionalUniversity/Sem1/Web-Dev/HTML/ETP/img.png
        LovelyProfessionalUniversity/Sem1/Web-Dev/HTML/ETP/index.html
        LovelyProfessionalUniversity/Sem1/Web-Dev/HTML/ETP/index2.html
        "LovelyProfessionalUniversity/Sem1/Web-Dev/HTML/HTML PROJECT FINAL DRAFT.zip"
        LovelyProfessionalUniversity/Sem1/Web-Dev/JS/index.html
        LovelyProfessionalUniversity/Sem1/Web-Dev/JS/index.js
        "LovelyProfessionalUniversity/Sem2/C Project/a.out"
        "LovelyProfessionalUniversity/Sem2/C Project/array-1.c"
        "LovelyProfessionalUniversity/Sem2/C Project/array_operations.c"
        "LovelyProfessionalUniversity/Sem2/C Project/bubble_sort.c"
        "LovelyProfessionalUniversity/Sem2/C Project/medical_terms.txt"
        "LovelyProfessionalUniversity/Sem2/C Project/module1"
        "LovelyProfessionalUniversity/Sem2/C Project/module1.c"
        "LovelyProfessionalUniversity/Sem2/C Project/module2.c"
        "LovelyProfessionalUniversity/Sem2/C Project/module3.c"
        "LovelyProfessionalUniversity/Sem2/C Project/module4.c"
        "LovelyProfessionalUniversity/Sem2/C Project/Pre-Submission Report.txt"
        "LovelyProfessionalUniversity/Sem2/C Project/readme.md"
        "LovelyProfessionalUniversity/Sem2/C Project/tester5.c"
        "LovelyProfessionalUniversity/Sem2/C Project/tester6.c"
        "LovelyProfessionalUniversity/Sem2/C Project/tester7.c"
        "LovelyProfessionalUniversity/Sem2/C Project/tester8.c"
        "LovelyProfessionalUniversity/Sem2/C_programming/alpha bet.c"
        LovelyProfessionalUniversity/Sem2/C_programming/area_of_square.c
        LovelyProfessionalUniversity/Sem2/C_programming/datatypes.c
        LovelyProfessionalUniversity/Sem2/C_programming/do_while_loop.c
        LovelyProfessionalUniversity/Sem2/C_programming/factorial.c
        LovelyProfessionalUniversity/Sem2/C_programming/for_loop.c
        LovelyProfessionalUniversity/Sem2/C_programming/func.c
        LovelyProfessionalUniversity/Sem2/C_programming/function.c
        LovelyProfessionalUniversity/Sem2/C_programming/greatest_of_three.c
        LovelyProfessionalUniversity/Sem2/C_programming/Hello_World.c
        LovelyProfessionalUniversity/Sem2/C_programming/if-else.c
        LovelyProfessionalUniversity/Sem2/C_programming/if_else.c
        LovelyProfessionalUniversity/Sem2/C_programming/input.c
        LovelyProfessionalUniversity/Sem2/C_programming/loop.c
        LovelyProfessionalUniversity/Sem2/C_programming/marks.c
        LovelyProfessionalUniversity/Sem2/C_programming/newfile.c
        LovelyProfessionalUniversity/Sem2/C_programming/odd_even.c
        LovelyProfessionalUniversity/Sem2/C_programming/star_square.c
        LovelyProfessionalUniversity/Sem2/C_programming/sum_of_all_digits.c
        LovelyProfessionalUniversity/Sem2/C_programming/sum_of_n_numbers.c
        LovelyProfessionalUniversity/Sem2/C_programming/sum_of_numbers.c
        LovelyProfessionalUniversity/Sem2/C_programming/sum_of_two_digits.c
        LovelyProfessionalUniversity/Sem2/C_programming/tester.c
        LovelyProfessionalUniversity/Sem2/C_programming/user-defined-datatype.c
        LovelyProfessionalUniversity/Sem2/C_programming/while_loop.c
        "LovelyProfessionalUniversity/Sem2/CodeRunner Custom Script/installation.md"
        "LovelyProfessionalUniversity/Sem2/CodeRunner Custom Script/setting.json"
        README.md LovelyProfessionalUniversity/Sem2/C_programming/jaat.cpp LovelyProfessionalUniversity/Sem2/C_programming/jaat.h)
